# hew

./: .dockerignore  .gitattributes  .gitignore  AUTHORS  BREAKING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_STYLE.md  CONTRIBUTING.md  Cargo.toml  JOURNEY.md  LESSONS.md  LICENSE-MIT  Makefile  NOTICE  README.md  SECURITY.md  THIRD-PARTY-LICENSES  about.hbs  about.toml  deny.toml  dist_node.ll  lefthook.yml  let_else_tuple_payload  let_else_tuple_payload.ll  ok2448.ll  owned_nested_tuple_record  owned_nested_tuple_record.ll  release-sanitizer-waiver.toml  rust-toolchain.toml  rust_out  service_example_1  service_example_2  service_example_3  service_example_4  service_example_5  service_example_6  sgconfig.yml  sort_prog  sort_prog.ll  (+6 more)
adze-cli/: Cargo.toml  README.md
adze-cli/src/: atomic_fs.rs  checksum.rs  cli.rs  client.rs  config.rs  credentials.rs  happy_eyeballs.rs  index.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  native.rs  package_fs.rs  package_name.rs  paths.rs  registry.rs  resolver.rs  signing.rs  tarball.rs
adze-cli/tests/: test_mock_registry.rs  test_symlink.rs
hew-analysis/: Cargo.toml
hew-analysis/src/: ast_visit.rs  calls.rs  code_actions.rs  completions.rs  definition.rs  folding.rs  hover.rs  inlay_hints.rs  lib.rs  method_lookup.rs  references.rs  rename.rs  resolver.rs  semantic_tokens.rs  signature_help.rs  symbols.rs  util.rs
hew-astgen/: Cargo.toml  README.md
hew-astgen/src/: codegen.rs  hew_emit.rs  main.rs  model.rs  parse.rs  special_cases.rs  type_map.rs
hew-astgen/tests/: fail_closed.rs
hew-cabi/: Cargo.toml  README.md
hew-cabi/src/: cabi.rs  lib.rs  map.rs  sink.rs  vec.rs
hew-capability-gen/: Cargo.toml  README.md
hew-capability-gen/src/: lib.rs
hew-capability-gen/tests/: row_count.rs
hew-cli/: Cargo.toml  README.md  build.rs
hew-cli/src/: args.rs  compile.rs  diagnostic.rs  diagnostic_json.rs  explain_cow.rs  host_death.rs  link.rs  machine.rs  main.rs  manifest.rs  native_link.rs  platform.rs  playground.rs  process.rs  router.rs  signal.rs  target.rs  util.rs  wasi_runner.rs  watch.rs  wire.rs
hew-cli/tests/: actor_mailbox_record_collection_leak_oracle.rs  actor_resource_opaque_state.rs  actor_state_resource_field_leak_oracle.rs  actor_string_reply_enum_leak_oracle.rs  alias_return_composite_no_double_free_oracle.rs  array_repeat_owned_element_leak_oracle.rs  ask_reply_owned_leak_oracle.rs  await_e2e.rs  branch_around_return_member_leak_oracle.rs  build_args_e2e.rs  build_host_e2e.rs  build_script.rs  bytes_drop_leak_oracle.rs  cap13_identity_monitor_leak_oracle.rs  channel_recv_e2e.rs  check_deep_gates_e2e.rs  closure_capture_owned_leak_oracle.rs  closure_env_drop_leak_oracle.rs  closure_in_struct_leak_oracle.rs  codegen_diagnostic_e2e.rs  codegen_failclosed_span_e2e.rs  collection_field_binder_drop_leak_oracle.rs  compile_links_runtime.rs  compile_v05_links_runtime.rs  compile_v05_wasm_parity.rs  compile_wasm_parity.rs  composite_yield_leak_oracle.rs  conditional_move_drop_leak_oracle.rs  cross_target_e2e.rs  diagnostic_source_e2e.rs  diagnostics_cascade_e2e.rs  directory_module_demo.rs  discarded_owned_option_leak_oracle.rs  distributed_two_process_e2e.rs  doc_e2e.rs  doc_stdlib_e2e.rs  dwarf_debugger_locals_e2e.rs  enum_callee_consume_drop_leak_oracle.rs  enum_resource_variant_leak_oracle.rs  escaped_sibling_field_drop_leak_oracle.rs  (+100 more)
hew-codegen/: .clang-format  .gitignore  CMakeLists.txt  lsan.supp  runtime_manifest.json
hew-codegen-rs/: Cargo.toml
hew-codegen-rs/src/: abi_class.rs  arith.rs  coro.rs  emit.rs  layout.rs  lib.rs  llvm.rs  llvm_tests.rs  runtime_abi.rs  runtime_family_parity.rs  suspend.rs  thunks.rs  wire.rs
hew-codegen-rs/tests/: abi.rs  abi_offset_parity.rs  actor_dispatch_borrow_abi.rs  actor_e2e.rs  actor_send_status_check.rs  bytes_extern_fail_closed.rs  bytes_index_exec.rs  char_emission.rs  closure_env_drop_manifest.rs  composite_return.rs  cooperate_emission.rs  coro_emission_exec.rs  cycle_capable_spawn_abi.rs  div_shift_trap_emission.rs  duration_emission.rs  dwarf_emitted_object.rs  dwarf_variable_dies.rs  dyn_trait_drop_in_place_emission.rs  dyn_trait_method_dispatch.rs  dyn_trait_thunk_emission.rs  dyn_trait_vtable_emission.rs  e2e.rs  elab_drop_plans.rs  emission.rs  emit_duplex_pair.rs  error_enum_cross_crate_parity.rs  exec.rs  ffi_int_width_exec.rs  float_emission.rs  float_return_exec.rs  for_in_vec_string_exec.rs  generator_exec.rs  hashmap_hashset_local_drop_emission.rs  hashmap_index_exec.rs  hashmap_keys_values_exec.rs  hashmap_layout_emission.rs  hashmap_layout_ops.rs  identity_emission.rs  if_let_exec.rs  jit_trap_bridge.rs  (+53 more)
hew-codegen/src/: CMakeLists.txt  codegen.cpp  codegen_capi.cpp  codegen_main.cpp  cpp_emitter.cpp  debug_info.cpp  jit_session.cpp  jit_symbol_map.cpp  msgpack_reader.cpp
hew-codegen/tests/: CMakeLists.txt  dwarf_assert_symbols.cmake  run_atos_smoke_test.cmake  run_coro_test.cmake  run_dwarf_coff_smoke_test.cmake  run_dwarf_linked_test.cmake  run_dwarf_smoke_test.cmake  run_dwarf_variable_metadata_test.cmake  run_e2e_panic_test.cmake  run_e2e_panic_test_wasm.cmake  run_e2e_test.cmake  run_e2e_test_file.cmake  run_e2e_test_sorted.cmake  run_e2e_test_wasm.cmake  run_e2e_test_wasm_inline.cmake  run_hew_test_common.cmake  run_linux_symbolizer_smoke_test.cmake  run_lldb_name_breakpoint_parity_test.cmake  run_reject_test.cmake  (+15 more)
hew-compile/: Cargo.toml
hew-export-macro/: Cargo.toml  README.md
hew-hir/: Cargo.toml
hew-lexer/: Cargo.toml  README.md
hew-lib/: Cargo.toml
hew-lsp/: Cargo.toml  README.md
hew-mir/: Cargo.toml  build.rs
hew-observe/: Cargo.toml  README.md
hew-parser/: Cargo.toml  README.md
hew-runtime/: Cargo.toml  DETERMINISM.md  README.md  build.rs  lsan.supp  tsan.supp
hew-runtime-testkit/: Cargo.toml
hew-sandbox-wasm/: Cargo.toml  README.md
hew-serialize/: Cargo.toml  README.md
hew-std/: Cargo.toml
hew-stdlib-gen/: Cargo.toml  README.md
hew-testutil/: Cargo.toml
hew-types/: Cargo.toml  README.md  build.rs
hew-wasm/: Cargo.toml  README.md
hew-wirecodec/: Cargo.toml  README.md
xtask/: Cargo.toml
(+5477 files in other folders)
