[workspace]
members = [
  "adze-cli",
  "hew-cabi",
  "hew-std",
  "std/encoding/binary",
  "std/text/template",
  "hew-cli",
  "hew-lexer",
  "hew-lib",
  "hew-lsp",
  "hew-parser",
  "hew-runtime",
  "hew-runtime-testkit",
  "hew-types",
  "hew-observe",
  "hew-wasm",
  "hew-sandbox-wasm",
  "hew-analysis",
  "hew-compile",
  "hew-hir",
  "hew-mir",
  "hew-codegen-rs",
  "hew-capability-gen",
  "hew-testutil",
  "xtask",
]
exclude = ["hew-parser/fuzz"]
resolver = "2"

[workspace.package]
version = "0.6.0-rc1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Stephen Olesen <slepp@slepp.ca>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
toml = "1"
libc = "0.2"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
base64 = "0.22"
rmp-serde = "1"
stacker = "0.1"
dirs = "6"
finl_unicode = "1"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
# Remaining duplicates (bitflags, fallible-iterator, getrandom, hashbrown,
# rand_core, tower, winnow) are transitive — latest upstream versions still
# pull conflicting majors and we cannot resolve them.
multiple_crate_versions = "allow"
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
allow_attributes_without_reason = "warn"
# Rust 1.94 lints — allow until next sweep
ref_as_ptr = "allow"
decimal_bitwise_operands = "allow"

[profile.dev]
panic = "abort"
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Profile for the SHIPPED `libhew.a` (and other consumer-facing staticlibs).
# Fat LTO folds prebuilt libstd into the archive's merged codegen unit, which
# breaks the byte-identical-libstd dedupe contract with external Rust
# staticlibs (`--link-lib` packages): their verbatim `std-*` member then
# collides on `rust_eh_personality` / std-internal exports. Building the
# archive without LTO keeps the prebuilt libstd members verbatim, so a package
# built with the same pinned rustc dedupes naturally at link time (see
# hew-cli/src/native_link.rs module docs). Binaries keep the LTO'd `release`.
[profile.release-lib]
inherits = "release"
lto = "off"
