[package]
name = "adze-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The Hew package manager"
readme = "README.md"
repository = "https://github.com/hew-lang/hew"
keywords = ["hew", "package-manager"]
categories = ["command-line-utilities"]

[[bin]]
name = "adze"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
semver = "1"
toml = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
tar = "0.4"
zstd = "0.13"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"
tiny_http = "0.12"
serde_json = "1"

[lints]
workspace = true
