[package]
name = "adze-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The Hew package manager"
readme = "README.md"
repository = "https://github.com/hew-lang/hew"
keywords = ["hew", "package-manager"]
categories = ["command-line-utilities"]

[[bin]]
name = "adze"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
semver = "1"
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.10.1"
rand_core = "0.10.1"
base64.workspace = true
tar = "0.4"
zstd = "0.13"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile.workspace = true
tiny_http = "0.12"
serde_json.workspace = true

[lints]
workspace = true
