[package]
name = "hew-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared analysis library for Hew language tooling"
repository = "https://github.com/hew-lang/hew"
readme = "README.md"
keywords = ["hew", "programming-language", "analysis"]
categories = ["compilers", "development-tools"]

[lints]
workspace = true

[dependencies]
hew-lexer = { path = "../hew-lexer" }
hew-parser = { path = "../hew-parser" }
hew-types = { path = "../hew-types" }
serde.workspace = true
tracing.workspace = true
