[package]
name = "hew-astgen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generates C++ msgpack deserialization from Hew AST definitions"

readme = "README.md"
repository = "https://github.com/hew-lang/hew"
keywords = ["hew", "codegen"]
categories = ["compilers"]

[lints]
workspace = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
