[package]
name = "hew-cabi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C ABI helpers for Hew native package bindings"
keywords = ["hew", "ffi", "c-abi", "programming-language"]
categories = ["compilers", "api-bindings"]

readme = "README.md"
repository = "https://github.com/hew-lang/hew"

[dependencies]
libc = "0.2"

[lints]
workspace = true
