[package]
name = "hew-capability-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generator scaffolding for the Hew WASM capability manifest"
repository = "https://github.com/hew-lang/hew"
keywords = ["hew", "wasm", "capability"]
categories = ["compilers"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
