[package]
name = "hew-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The Hew programming language compiler"
build = "build.rs"
readme = "README.md"
repository = "https://github.com/hew-lang/hew"
keywords = ["hew", "compiler", "programming-language"]
categories = ["compilers", "command-line-utilities"]

[[bin]]
name = "hew"
path = "src/main.rs"

[dependencies]
hew-compile = { path = "../hew-compile" }
hew-lexer = { path = "../hew-lexer" }
hew-parser = { path = "../hew-parser" }
hew-types = { path = "../hew-types" }
hew-serialize = { path = "../hew-serialize" }
clap.workspace = true
clap_complete.workspace = true
pulldown-cmark = "0.13"
rustyline = "17"
tempfile.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
notify = "8"
dirs.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
fd-lock = "4"
object = "0.37"

[lints]
workspace = true
