[package]
name = "hew-codegen-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Native and WebAssembly LLVM IR emitter for the Hew v0.5 compiler pipeline"
repository = "https://github.com/hew-lang/hew"
readme = "../README.md"
keywords = ["hew", "compiler", "llvm", "codegen", "wasm"]
categories = ["compilers"]

[dependencies]
hew-hir = { path = "../hew-hir" }
hew-mir = { path = "../hew-mir" }
hew-types = { path = "../hew-types" }
# Inkwell wraps LLVM. Pinned to llvm22-1 because the v0.5 backend probe
# (.claude/worktrees/c1-backend-probe @ e6c83faa) established this version
# empirically against Homebrew llvm@22, and the release/tooling surface keeps
# LLVM 22 as the shared major across the codebase.
inkwell = { version = "0.9", features = ["llvm22-1"] }

[dev-dependencies]
hew-testutil = { path = "../hew-testutil" }
hew-runtime = { path = "../hew-runtime", default-features = false }
hew-parser = { path = "../hew-parser" }
# Required by jit_trap_bridge.rs: libc::c_int for the sigsetjmp/siglongjmp FFI
# declarations used in the trap recorder (same pattern as hew-runtime/src/signal.rs).
libc.workspace = true
# RAII-cleaned temp directories for tests that drive `emit_module` end-to-end.
tempfile.workspace = true
