[package]
name = "hew-codegen-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Native and WebAssembly LLVM IR emitter for the Hew v0.5 compiler pipeline"
repository = "https://github.com/hew-lang/hew"
readme = "../README.md"
keywords = ["hew", "compiler", "llvm", "codegen", "wasm"]
categories = ["compilers"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }

[dependencies]
hew-hir = { path = "../hew-hir" }
hew-mir = { path = "../hew-mir" }
hew-types = { path = "../hew-types" }
# Supervisor restart-budget windows arrive as raw duration source strings
# (e.g. `"60s"`). Codegen interprets the unit via `hew_parser::parse_duration_ns`
# so duration parsing stays centralised in one place (no second parser).
hew-parser = { path = "../hew-parser" }
# Single source of truth for the trap-code discriminants codegen emits. Codegen
# imports `hew_runtime::internal::types::HEW_TRAP_*` so a runtime renumber fails
# the codegen build closed instead of silently desyncing a hand-copied literal.
# `default-features = false` keeps the heavy quic/profiler runtime features off
# the compiler build (only the leaf `internal::types` constants are needed).
hew-runtime = { path = "../hew-runtime", default-features = false }
# Inkwell wraps LLVM. Pinned to llvm22-1 because the v0.5 backend probe
# (.claude/worktrees/c1-backend-probe @ e6c83faa) established this version
# empirically against Homebrew llvm@22, and the release/tooling surface keeps
# LLVM 22 as the shared major across the codebase.
inkwell = { version = "0.9", default-features = false, features = [
  "llvm22-1",
  "target-x86",
  "target-aarch64",
  "target-webassembly",
] }

[dev-dependencies]
# `hew-cabi` re-declares the `#[repr(C)]` layout descriptor structs
# (`HewVecElemLayout`, `HewMapKeyLayout`, `HewMapValueLayout`) that codegen
# hand-mirrors as LLVM struct types. Referenced only from `#[cfg(test)]`
# parity guards, which compare codegen's mirror against the real struct via
# `offset_of!` — production codegen never links it.
hew-cabi = { path = "../hew-cabi" }
hew-testutil = { path = "../hew-testutil" }
# Required by jit_trap_bridge.rs: libc::c_int for the sigsetjmp/siglongjmp FFI
# declarations used in the trap recorder (same pattern as hew-runtime/src/signal.rs).
libc.workspace = true
# RAII-cleaned temp directories for tests that drive `emit_module` end-to-end.
tempfile.workspace = true
