[package]
name = "hew-compile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Frontend compilation pipeline for the Hew language"
readme = "../README.md"
repository = "https://github.com/hew-lang/hew"
keywords = ["hew", "compiler", "frontend"]
categories = ["compilers"]

[dependencies]
hew-lexer = { path = "../hew-lexer" }
hew-parser = { path = "../hew-parser" }
hew-serialize = { path = "../hew-serialize" }
hew-types = { path = "../hew-types" }
serde = { version = "1", features = ["derive"] }
toml = "1"

[lints]
workspace = true
