[package]
name = "hew-export-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macro for annotating Hew runtime exports with stdlib metadata"

readme = "README.md"
repository = "https://github.com/hew-lang/hew"
keywords = ["hew", "stdlib"]
categories = ["compilers"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
hew-export-types = { path = "../hew-export-types" }

[dev-dependencies]
hew-export-types = { path = "../hew-export-types" }
