[package]
name = "hew-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Resolved HIR for the Hew v0.5 compiler pipeline"
repository = "https://github.com/hew-lang/hew"
readme = "../README.md"
keywords = ["hew", "compiler", "hir"]
categories = ["compilers"]

[dependencies]
hew-parser = { path = "../hew-parser" }
hew-types = { path = "../hew-types" }
serde.workspace = true

[features]
# Exposes test-only entrypoints (e.g. `run_call_shape_gates_for_test`) used
# by integration tests under `tests/` that need to drive lowering-internal
# gates against synthetic HirItem fixtures. Off by default so production
# builds do not see these symbols. Enable with
# `cargo test -p hew-hir --features internal-test-hooks`.
internal-test-hooks = []

[[test]]
name = "call_shape_gates"
required-features = ["internal-test-hooks"]

[lints]
workspace = true
