[package]
name = "hew-lib"
version.workspace = true
edition = "2024"
description = "Combined Hew runtime + standard library — single staticlib for linking"
publish = false

[lib]
name = "hew"
crate-type = ["staticlib"]

[dependencies]
hew-runtime = { path = "../hew-runtime" }
hew-std = { path = "../hew-std" }
