[package]
name = "hew-mir"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "THIR/MIR ladder for the Hew v0.5 compiler pipeline"
repository = "https://github.com/hew-lang/hew"
readme = "../README.md"
keywords = ["hew", "compiler", "mir"]
categories = ["compilers"]

[dependencies]
hew-hir = { path = "../hew-hir" }
hew-parser = { path = "../hew-parser" }
hew-types = { path = "../hew-types" }
serde.workspace = true
siphasher = "1"

[build-dependencies]
hew-types = { path = "../hew-types" }

[dev-dependencies]

# Property-based testing for per-Return drop-plan live-set narrowing.
# Dev-only — never linked into release builds. Scoped to non-wasm
# targets because `proptest` transitively depends on `wait-timeout`,
# which does not compile for `wasm32-wasip1` (matches the pattern
# already established in hew-runtime/Cargo.toml). The property tests
# that consume proptest are themselves native-only, so this scoping
# costs no test coverage on wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Runtime layout authorities are used only by native parity tests.
hew-runtime = { path = "../hew-runtime", default-features = false }
proptest = "1"
# Independent TOML parser for the FFI ownership-contract drift test
# (tests/ffi_contract_drift.rs) — deliberately NOT the build script's
# hand parser, so parser bugs cannot self-validate.
toml.workspace = true

[lints]
workspace = true
