[package]
name = "hew-observe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TUI actor observer for debugging Hew actor systems"

readme = "README.md"
repository = "https://github.com/hew-lang/hew"
keywords = ["hew", "debugging"]
categories = ["development-tools::debugging"]

[[bin]]
name = "hew-observe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
libc = "0.2"
ratatui = "0.30"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
