[package]
name = "hew-observe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TUI actor observer for debugging Hew actor systems"

readme = "README.md"
repository = "https://github.com/hew-lang/hew"
keywords = ["hew", "debugging"]
categories = ["development-tools::debugging"]

[[bin]]
name = "hew-observe"
path = "src/main.rs"

[dependencies]
clap.workspace = true
crossterm = "0.29"
libc.workspace = true
ratatui = "0.30"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
