[package]
name = "hew-runtime-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe handle wrappers over hew-runtime FFI primitives for test code (Drop-based cleanup, six-axis SAFETY invariants documented at wrapper level)"
repository = "https://github.com/hew-lang/hew"
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
hew-runtime = { path = "../hew-runtime" }
libc.workspace = true

[lints]
workspace = true
