[package]
name = "hew-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure Rust runtime for the Hew actor language (libhew_rt)"
repository = "https://github.com/hew-lang/hew"
readme = "README.md"
keywords = ["hew", "programming-language", "runtime", "actors"]
categories = ["compilers", "concurrency"]

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["full"]
# Everything — backwards compatible, same as before features existed
full = ["encryption", "profiler", "quic"]
# Remaining features (most ecosystem modules extracted to standalone packages)
encryption = ["dep:snow"]

# QUIC transport (replaces TCP + Noise with QUIC/TLS 1.3)
quic = [
  "dep:quinn",
  "dep:rustls",
  "dep:rustls-webpki",
  "dep:rcgen",
  "dep:tokio",
  "dep:rustls-pemfile",
]

# Built-in profiler (dashboard, pprof export)
profiler = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:tokio", "dep:flate2"]
# OpenTelemetry OTLP/HTTP trace exporter (no tokio — pure sync HTTP via ureq)
otel = ["dep:ureq"]

[dependencies]
# Core dependencies — always linked (collections, print, string, etc.)
hew-cabi = { path = "../hew-cabi" }
libc.workspace = true
tracing.workspace = true
zeroize = { version = "1", features = ["zeroize_derive"] }

# Threading/networking deps — not available on wasm32
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
rand = "0.10.1"
socket2 = "0.6"

# Optional ecosystem dependencies
snow = { version = "0.10", optional = true }
flate2 = { version = "1", optional = true }
hyper = { version = "1", optional = true, features = ["http1", "server"] }
hyper-util = { version = "0.1", optional = true, features = ["tokio", "http1"] }
http-body-util = { version = "0.1", optional = true }
# Sync HTTP client for the OTel OTLP/HTTP exporter (no async runtime needed).
# TLS is opt-in — most OTel endpoints (Jaeger, Tempo) run on plain HTTP locally.
ureq = { version = "3", optional = true, default-features = false }

# QUIC transport dependencies (optional, behind "quic" feature)
quinn = { version = "0.11", optional = true, default-features = false, features = [
  "runtime-tokio",
  "rustls-ring",
] }
rustls = { version = "0.23", optional = true, default-features = false, features = [
  "ring",
  "std",
] }
# Explicit rustls-webpki pin to fix CRL parse panic (GHSA-82j2-j2ch-gfr8) and name constraint validation.
# rustls v0.23 accepts ^0.103.5; we pin to 0.103.13 which includes both security fixes.
rustls-webpki = { version = "0.103.13", optional = true }
rcgen = { version = "0.14", optional = true }
tokio = { version = "1", optional = true, default-features = false, features = [
  "rt-multi-thread",
  "net",
  "time",
  "sync",
  "macros",
] }
rustls-pemfile = { version = "2", optional = true }

[dev-dependencies]
# For unit tests
rand = "0.10.1"
tempfile.workspace = true
tracing-subscriber.workspace = true
# For the OTel integration test mock receiver (direct HTTP POST)
ureq = { version = "3", default-features = false }
# For profiler server JSON-escape unit tests
serde_json.workspace = true

[lints]
workspace = true
